[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Gate_001.png" type="Texture" id=1]
[ext_resource path="res://Assets/Decorations/Gate_Portcullis.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Gate.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "GateClose"
tracks/0/type = "value"
tracks/0/path = NodePath("Portcullis:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ), Vector2( 0, 9 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "GateOpen"
tracks/0/type = "value"
tracks/0/path = NodePath("Portcullis:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 9 ), Vector2( 0, -13 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 15.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11, 15.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11, 15.5 )

[node name="Gate" type="StaticBody2D" groups=["gates"]]
script = ExtResource( 3 )

[node name="Portcullis" type="Sprite" parent="."]
position = Vector2( 0, 9 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GateClose = SubResource( 2 )
anims/GateOpen = SubResource( 1 )

[node name="Locked" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.5 )
shape = SubResource( 3 )

[node name="OpenRight" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -21, -8.5 )
shape = SubResource( 4 )
disabled = true

[node name="OpenLeft" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 21, -8.5 )
shape = SubResource( 5 )
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
